Day 1 after url mapping

--- a/00_intro/articles/templates/index.html
+++ b/00_intro/articles/templates/index.html
@@ -2,4 +2,7 @@
 
 {% block content %}
   <h1>INDEX</h1>
+  <a href={% url 'variables' %}>variables</a>
+  <a href={% url 'filters' %}>filters</a>
+  <a href={% url 'throw' %}>throw</a>
 {% endblock content %}
