--- a/00_intro/articles/templates/catch.html
+++ b/00_intro/articles/templates/catch.html
@@ -3,5 +3,5 @@
   <h1>CATCH</h1>
   <h1>여기서
     {{ message }}를 받았어!!</h1>
-  {% comment %} <a href="{% url 'throw' %}">뒤로가기</a> {% endcomment %}
+  <a href="{% url 'throw' %}">뒤로가기</a>
 {% endblock %}
