--- a/00_intro/articles/templates/throw.html
+++ b/00_intro/articles/templates/throw.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
   <h1>THROW</h1>
-  <form action="/catch/" method="GET">
+  <form action="{% url 'catch' %}" method="GET">
     <label for="message">Throw :
     </label>
     <input type="text" name="message"/>
