--- a/02_crud/crud/articles/templates/articles/new.html
+++ b/02_crud/crud/articles/templates/articles/new.html
@@ -4,12 +4,14 @@
   <h1>NEW</h1>
   <form action="{% url 'articles:create' %}" method="POST">
     {% csrf_token %}
-    <label for="title">Title: </label>
+    <label for="title">Title:
+    </label>
     <input type="text" name="title" id="title"><br>
-    <label for="content">Content: </label>
+    <label for="content">Content:
+    </label>
     <textarea name="content" id="content" cols="30" rows="5"></textarea><br>
     <input type="submit">
   </form>
   <hr>
   <a href="{% url 'articles:index' %}">[back]</a>
-{% endblock  %}
+{% endblock %}
